force-app/main/default/objects/Transaction__c/fields/Credit_Card_Expiration_Year__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Expiration_Year__c</fullName>
    <label>Credit Card Expiration Year</label>
    <length>4</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>