force-app/main/default/objects/Transaction__c/fields/Credit_Card_Id__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Id__c</fullName>
    <description>Credit Card Id from AAI response</description>
    <label>Credit Card Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>