force-app/main/default/objects/Transaction__c/fields/Credit_Card_Item__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Item__c</fullName>
    <description>Credit Card Item from AAI response</description>
    <label>Credit Card Item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>