force-app/main/default/objects/Transaction__c/fields/Credit_Card_Last_4_Digits__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Last_4_Digits__c</fullName>
    <label>Credit Card Last 4 Digits</label>
    <length>4</length>
    <type>Text</type>
</CustomField>