force-app/main/default/objects/Transaction__c/fields/Purchase_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Identifier__c</fullName>
    <label>Purchase Identifier</label>
    <length>80</length>
    <type>Text</type>
</CustomField>