force-app/main/default/objects/Transaction__c/fields/Response_Authorization_Code__c.field-meta.xml
<CustomField>
    <fullName>Response_Authorization_Code__c</fullName>
    <label>Response Authorization Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>