force-app/main/default/objects/Transaction__c/fields/Response_Error_Log__c.field-meta.xml
<CustomField>
    <fullName>Response_Error_Log__c</fullName>
    <label>Response Error Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>