force-app/main/default/objects/Transaction__c/fields/Response_Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Response_Transaction_Id__c</fullName>
    <label>Response Transaction Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>