force-app/main/default/objects/Transaction__c/fields/Roster_Id__c.field-meta.xml
<CustomField>
    <fullName>Roster_Id__c</fullName>
    <label>Roster Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>