force-app/main/default/objects/Transaction__c/fields/RosterRoster__c.field-meta.xml
<CustomField>
    <fullName>RosterRoster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Roster</label>
    <referenceTo>lmsilt__Roster__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>