force-app/main/default/objects/Transaction__c/fields/Transaction_Information__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Information__c</fullName>
    <label>Transaction Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>