force-app/main/default/objects/Transaction__c/fields/Type_c__c.field-meta.xml
<CustomField>
    <fullName>Type_c__c</fullName>
    <label>Type__c</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Charge</fullName>
                <default>true</default>
                <label>Charge</label>
            </value>
            <value>
                <fullName>Authorization</fullName>
            </value>
            <value>
                <fullName>Void</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Promo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>